<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_help">

    <fragment
        android:id="@+id/nav_share"
        android:name="com.airsen.button.ui.shareFragment"
        android:label="@string/share_app"
        tools:layout="@layout/fragment_share"/>
    <fragment
        android:id="@+id/nav_language"
        android:name="com.airsen.button.ui.languageFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_language"/>
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.airsen.button.ui.Notifications"
        android:label="@string/notification"
        tools:layout="@layout/dialog_setting_notification"/>
     <fragment
         android:id="@+id/nav_help"
         android:name="com.airsen.button.ui.HelpActivity"
         android:label="@string/Help"
         tools:layout="@layout/activity_help"/>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.airsen.button.ui.AboutActivity"
        android:label="@string/about_us"
        tools:layout="@layout/activity_about"/>
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.airsen.button.ui.FeedBackActivity"
        android:label="@string/feedback"
        tools:layout="@layout/activity_feed_back"/>
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.airsen.button.ui.ContactActivity"
        android:label="@string/contact_with_us"
        tools:layout="@layout/activity_contact"/>
    <fragment
        android:id="@+id/nav_smartcogfict"
        android:label="@string/connect_device"/>
    <fragment
        android:id="@+id/nav_addnote"
        android:label="@string/sign_in_for_developer"
        tools:layout="@layout/activity_for_developer"/>
</navigation>