<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:id="@+id/favorit"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="141dp"
        android:layout_height="125dp"
        app:srcCompat="@drawable/tim" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Choice"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_place_favotite_place"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:hint="@string/no_information"
            android:padding="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/favorite_place"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/favorite_place_note"
        android:textSize="20dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="4dip">

        <Button
            android:id="@+id/btn_cancle_dialog_favotite_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_submit_btn_cancel" />

        <Button
            android:id="@+id/btn_choice_dialog_favotite_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_submit_btn" />

    </LinearLayout>


</LinearLayout>