<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/contact_information"
        android:textSize="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="1">

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_contacts_black_24dp" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/contact_facebook"
                android:textSize="25dp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_contacts_black_24dp" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/contact_zalo"
                android:textSize="25dp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_contacts_black_24dp" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/contact_gmail"
                android:textSize="25dp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_contacts_black_24dp" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/contact_phone_number"
                android:textSize="25dp" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_contacts_black_24dp" />

            <TextView
                android:layout_margin="5dp"
                android:text="@string/contact_github"
                android:textSize="25dp" />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/office"
            android:textSize="25dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/contact_office"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>