<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tv_setting_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_language"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_vietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/English" />



    </RadioGroup>

    <Button
        android:id="@+id/btn_setting_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0f0"
        android:text="@string/setting_submit_btn"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>
</LinearLayout>