<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".activity.SigninActivity">
    <ImageView
        android:id="@+id/imv_take_data_activity"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/airmap_logo"
        />
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:maxLength="100"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLength="100"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/click_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="forget password"
            android:textColor="@android:color/holo_green_dark" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/siginup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="Don't have an account"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:text="@string/Singup"/>

    </LinearLayout>







</LinearLayout>